Bug 166795 - Backspace at paragraph start for not counted numbered paragraph doesn't decrease indent
Summary: Backspace at paragraph start for not counted numbered paragraph doesn't decre...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-30 14:43 UTC by Miklos Vajna
Modified: 2025-06-25 12:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (13.61 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-05-30 14:43 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-05-30 14:43:34 UTC
Created attachment 201044 [details]
Minimal reproducer

Steps to reproduce the problem:

1) open the attached bugdoc
2) go to the document end
3) press backspace once: the paragraph is still part of the numbering, but it's no longer counted
4) press backspace again

Expected result: indent is increased, so the new left margin is what used to be the first line margin.

Actual result: left margin doesn't change.

Bisecting using linux-64-7.6.git results in db115bec9254417ef7a3faf687478fe5424ab378 (tdf#78510 sw,cui: split SvxLRSpaceItem for SwTextNode, SwTextFormatColl, 2023-02-24)
Comment 1 Miklos Vajna 2025-05-30 14:44:07 UTC
I'm working on a fix for this.
Comment 2 Commit Notification 2025-06-02 12:02:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6860cde78169af464a83ed6b9aa20b03e3a53bd4

tdf#166795 sw: fix removing indent of para with num rule which isn't counted

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-02 13:16:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/66681fd117adc85ad827dcc018c522d6336e7f4b

tdf#166795 sw: fix removing indent of para with num rule which isn't counted

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2025-06-25 12:18:29 UTC
Verified in

Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 211c193b1c7391b4f1c1172214a90899de19b06a
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Now pressing backspace the second time decreases the left indent of the numbered paragraph, just like in 7.5.